--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <input type="text" id="input"></input>
        
-        <button type="button" class="btn btn-dark" id="study" onclick="study">Study Now</button>
+        <button onclick="generateOrganicMechanisms()">Study Now</button>
 
     </div>
     
